# lofi-bot-dashboad

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: bot-architecture.md
docs/mock/: desiner-system.html
src/: App.tsx  index.css  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/commands/: AddStationCommand.ts  GlobalRankCommand.ts  HealthCommand.ts  PlayCommand.ts  ProfileCommand.ts  RankCommand.ts  RemoveStationCommand.ts  SetDefaultCommand.ts  StationsCommand.ts  StopCommand.ts
src/components/: app-sidebar.tsx  auth-guard.tsx  dashboard-layout.tsx
src/config/: index.ts
src/controllers/: CommandController.ts
src/database/: connection.ts  schema.ts
src/hooks/: use-guilds.ts  use-health.ts  use-leaderboard.ts  use-stations.ts
src/lib/: api-client.ts  query-client.ts  utils.ts
src/models/: types.ts
src/pages/: health.tsx  leaderboard.tsx  settings.tsx
src/repositories/: GuildRepository.ts  GuildUserStatsRepository.ts  StationRepository.ts  UserProfileRepository.ts
src/services/: AudioService.ts  HealthServer.ts  HealthService.ts  ProfileService.ts  StationService.ts  StreamService.ts  guild-service.ts  health-service.ts  leaderboard-service.ts  profile-service.ts  station-service.ts
src/stores/: auth-store.ts
src/types/: api.ts
(+41 files in other folders)
