[package]
name = "lofi-bot-dashboard"
version = "0.1.0"
description = "Lofi Bot Dashboard"
edition = "2021"

[lib]
name = "lofi_bot_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
